--- a/frontend/src/app/admin/entry-route/administration/administration.component.html
+++ b/frontend/src/app/admin/entry-route/administration/administration.component.html
@@ -2,7 +2,9 @@
 <div class="wrapper">
 
   <!-- Navbar -->
-  <mat-progress-bar appHiderElement [showOn]="symfonyApiCallEvent.startSendLogin" [hideOn]="symfonyApiCallEvent.stopSendLogin" class="progres-line" mode="indeterminate"></mat-progress-bar>
+  <app-hidder [showOn]="symfonyApiCallEvent.startSendLogin" [hideOn]="symfonyApiCallEvent.stopSendLogin">
+    <mat-progress-bar class="progres-line" mode="indeterminate"></mat-progress-bar>
+  </app-hidder>
   <nav class="main-header navbar navbar-expand navbar-white navbar-light">
     <!-- Left navbar links -->
     <ul class="navbar-nav">
