--- a/frontend/src/app/shared/file-manager/components/file-manager/file-manager.component.css
+++ b/frontend/src/app/shared/file-manager/components/file-manager/file-manager.component.css
@@ -65,3 +65,17 @@
 h5 {
   font-size: 15px;
 }
+
+.folder {
+  margin-right: 7px;
+}
+
+.mat-tree-node:hover {
+  cursor: pointer;
+  background-color: #eee;
+}
+
+.selected-tree-node{
+  color: #e3165b;
+  background-color: #eee;
+}
