--- a/frontend/src/app/shared/file-manager/components/file-manager/file-manager.component.html
+++ b/frontend/src/app/shared/file-manager/components/file-manager/file-manager.component.html
@@ -3,20 +3,19 @@
     <div class="col-2">
       <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
         <!-- This is the tree node template for leaf nodes -->
-        <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding matTreeNodePaddingIndent="10" (click)="changeDirectoryFromTree(node)">
+        <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding matTreeNodePaddingIndent="10" (click)="changeDirectoryFromTree(node)" [class.selected-tree-node]="selectedTreeNode === node">
           <!-- use a disabled button to provide padding for tree leaf -->
           <button mat-icon-button disabled></button>
-          {{node.name}}
+          <fa-icon class="folder" [icon]="icons.faFolder"></fa-icon>{{node.name}}
         </mat-tree-node>
         <!-- This is the tree node template for expandable nodes -->
-        <mat-tree-node *matTreeNodeDef="let node;when: hasDirectoryChild" matTreeNodePadding matTreeNodePaddingIndent="10">
-          <button mat-icon-button matTreeNodeToggle
-                  [attr.aria-label]="'Toggle ' + node.name">
+        <mat-tree-node *matTreeNodeDef="let node;when: hasDirectoryChild" matTreeNodePadding matTreeNodePaddingIndent="10" (click)="changeDirectoryFromTree(node)" [class.selected-tree-node]="selectedTreeNode === node">
+          <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'Toggle ' + node.name">
             <mat-icon class="mat-icon-rtl-mirror">
               {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
             </mat-icon>
           </button>
-          {{node.name}}
+          <fa-icon class="folder" [icon]="icons.faFolder"></fa-icon>{{node.name}}
         </mat-tree-node>
       </mat-tree>
     </div>
