--- a/frontend/src/app/shared/file-manager/components/file-manager/file-manager.component.html
+++ b/frontend/src/app/shared/file-manager/components/file-manager/file-manager.component.html
@@ -1,4 +1,8 @@
 <div class="container-fluid">
+  <div class="row header-panel">
+    <button mat-stroked-button><fa-icon class="folder" [icon]="icons.faFolder"></fa-icon> Nový adresář</button>
+    <button mat-stroked-button><fa-icon class="folder" [icon]="icons.faUpload"></fa-icon> Nahrát soubor</button>
+  </div>
   <div class="row">
     <div class="col-2">
       <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
@@ -19,7 +23,21 @@
         </mat-tree-node>
       </mat-tree>
     </div>
-    <div class="col-10">
+    <div class="col-10 file-area">
+      <div class="row mini-panel">
+        <div class="col-8">
+          nav > aloha
+        </div>
+        <div class="col-4 text-right">
+          <mat-form-field class="example-form-field" appearance="fill">
+            <input matInput type="text" [(ngModel)]="searchValue" placeholder="Vyhledat soubor..." >
+            <mat-icon matPrefix>search</mat-icon>
+            <button *ngIf="searchValue" matSuffix mat-icon-button aria-label="Clear" (click)="searchValue=''">
+              <mat-icon>close</mat-icon>
+            </button>
+          </mat-form-field>
+        </div>
+      </div>
       <div class="row" (contextmenu)="openContextMenu2($event, areaContextMenu2); $event.preventDefault();">
         <div class="col-xl-1 col-sm-2" *ngFor="let file of currentPathContent|async">
           <div class="file-man-box">
