Mini navigation file manager

--- a/frontend/src/app/shared/file-manager/components/file-manager/large-item/large-item.component.html
+++ b/frontend/src/app/shared/file-manager/components/file-manager/large-item/large-item.component.html
@@ -1,5 +1,4 @@
-<div class="file-man-box">
-  <mat-checkbox></mat-checkbox>
+<div class="file-man-box" [class.selected]="selected">
   <div class="file-img-box"><mat-icon>folder</mat-icon></div>
   <div class="file-man-title">
     <p class="mb-0 text-overflow"><small>{{file.name}}</small></p>
