--- a/frontend/src/app/shared/file-manager/components/file-manager/file-manager.component.html
+++ b/frontend/src/app/shared/file-manager/components/file-manager/file-manager.component.html
@@ -40,7 +40,7 @@
       </div>
       <div (contextmenu)="openContextMenu2($event, areaContextMenu2); $event.preventDefault();">
         <div class="row">
-          <app-large-item class="col-xl-1 col-sm-2" *ngFor="let file of currentPathContent|async" [file]="file"></app-large-item>
+          <app-large-item class="col-xl-1 col-sm-2" *ngFor="let file of currentPathContent|async" [file]="file" (lastSelected)="lastSelectedFile=$event" (changeDirectory)="changeCurrentPath($event, true)"></app-large-item>
         </div>
       </div>
     </div>
