--- a/frontend/src/app/shared/file-manager/components/file-manager/file-manager.component.html
+++ b/frontend/src/app/shared/file-manager/components/file-manager/file-manager.component.html
@@ -1,7 +1,8 @@
 <div class="container-fluid">
   <div class="row header-panel">
+    <input #fileUploadButton type="file" style="display: none" multiple (change)="uploadFiles($event)">
     <button mat-stroked-button (click)="createDirectoryDialog(createDirectoryTemplate)"><fa-icon class="folder" [icon]="icons.faFolder"></fa-icon> Nový adresář</button>
-    <button mat-stroked-button><fa-icon class="folder" [icon]="icons.faUpload"></fa-icon> Nahrát soubor</button>
+    <button mat-stroked-button (click)="fileUploadButton.click()"><fa-icon class="folder" [icon]="icons.faUpload"></fa-icon> Nahrát soubor</button>
   </div>
   <div class="row">
     <div class="col-2">
