Submenu for context menu

--- a/frontend/src/app/shared/file-manager/components/file-manager/file-manager.component.html
+++ b/frontend/src/app/shared/file-manager/components/file-manager/file-manager.component.html
@@ -54,7 +54,7 @@
 
 <ng-template appContextMenuRoot #areaContextMenuItem="contextMenuRootDirective">
   <section class="user-menu">
-    <div appContextMenuItem>Smazat</div>
+    <div appContextMenuItem (click)="removeFiles()">Smazat</div>
   </section>
 </ng-template>
 
