--- a/frontend/src/app/shared/file-manager/components/file-manager/file-manager.component.html
+++ b/frontend/src/app/shared/file-manager/components/file-manager/file-manager.component.html
@@ -39,15 +39,15 @@
           </mat-form-field>
         </div>
       </div>
-      <div (contextmenu)="openContextMenu2($event, areaContextMenu2); $event.stopPropagation(); $event.preventDefault();">
+      <dts-select-container [(selectedItems)]="selectedItems" (contextmenu)="openContextMenu2($event, areaContextMenu2); $event.stopPropagation(); $event.preventDefault();">
         <div class="row">
-          <app-large-item #fileItem class="col-xl-1 col-sm-2" *ngFor="let file of currentPathContent|async" [file]="file"
+          <app-large-item [dtsSelectItem]="fileItem" #fileItem class="col-xl-1 col-sm-2" *ngFor="let file of currentPathContent|async" [file]="file"
                           (lastSelected)="lastSelectedFile=$event"
                           (changeDirectory)="changeCurrentPath($event, false)"
                           (contextMenuEmmitter)="openContextMenuItem($event, areaContextMenuItem, fileItem)">
           </app-large-item>
         </div>
-      </div>
+      </dts-select-container>
     </div>
   </div>
 </div>
