--- a/frontend/src/app/admin/entry-route/administration/menu/menu.component.html
+++ b/frontend/src/app/admin/entry-route/administration/menu/menu.component.html
@@ -24,6 +24,14 @@
     </a>
   </li>
   <li class="nav-item">
+    <a routerLink="article/list" routerLinkActive="active" class="nav-link">
+      <i class="nav-icon fas fa-copy"></i>
+      <p>
+        Moje články
+      </p>
+    </a>
+  </li>
+  <li class="nav-item">
     <a routerLink="file" routerLinkActive="active" class="nav-link">
       <i class="nav-icon fas fa-copy"></i>
       <p>
