Submenu for context menu

--- a/frontend/src/app/admin/entry-route/administration/admin/plugin/create-plugin/create-plugin.component.html
+++ b/frontend/src/app/admin/entry-route/administration/admin/plugin/create-plugin/create-plugin.component.html
@@ -1,11 +1,5 @@
-<div class="card card-primary card-outline">
-  <div class="card-header">
-    <h3 class="card-title">Vytvořit plugin <b>{{pluginResolver.name}}</b></h3>
-  </div> <!-- /.card-body -->
-  <div class="card-body">
-    <ng-template></ng-template>
-  </div><!-- /.card-body -->
-</div>
+<app-mini-admin></app-mini-admin>
+
 
 
 
