--- a/frontend/src/app/admin/entry-route/administration/admin/plugin/create-plugin/create-plugin.component.html
+++ b/frontend/src/app/admin/entry-route/administration/admin/plugin/create-plugin/create-plugin.component.html
@@ -1,5 +1,21 @@
-<app-mini-admin></app-mini-admin>
-
+<div class="card card-primary card-outline">
+  <div class="card-header">
+    <h3 class="card-title">Vytvořit plugin {{pluginResolver.name}}</h3>
+  </div> <!-- /.card-body -->
+  <div class="card-body">
+    <form [formGroup]="createForm">
+      <app-global-form-error></app-global-form-error>
+      <input appFormError type="text" class="form-control" placeholder="Název" formControlName="name">
+      <div class="container-fluid mt-3">
+        <div class="row justify-content-end">
+          <a [routerLink]="['../../list-created', pluginResolver.identifier]" [replaceUrl]="true" mat-button>Zpět na seznam</a>
+          <button type="submit" mat-raised-button color="primary" class="ml-2"><i class="material-icons">add</i>Uložit
+          </button>
+        </div>
+      </div>
+    </form>
+  </div><!-- /.card-body -->
+</div>
 
 
 
