--- a/frontend/src/app/admin/entry-route/administration/admin/plugin/list-created/list-created.component.html
+++ b/frontend/src/app/admin/entry-route/administration/admin/plugin/list-created/list-created.component.html
@@ -13,7 +13,10 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef class="text-right">Akce</th>
         <td mat-cell *matCellDef="let element" class="text-right">
-<!--          <mat-icon>settings</mat-icon> <a [routerLink]="['../list-created', element.id]">Vstoupit</a>-->
+          <a [routerLink]="['../../setting', element.id]"><i class="material-icons">settings</i>nastavení</a> |
+          <a [routerLink]="['../../update', element.id]"><i class="material-icons">list</i>Editace pluginu</a> |
+          <a (click)="openRemoveWebDialog(element)" class="text-danger"><i
+            class="material-icons">delete</i>smazat</a>
         </td>
       </ng-container>
 
