--- a/frontend/src/app/admin/entry-route/administration/admin/plugin/update-plugin/update-plugin.component.html
+++ b/frontend/src/app/admin/entry-route/administration/admin/plugin/update-plugin/update-plugin.component.html
@@ -3,11 +3,11 @@
     <h3 class="card-title">Úprava pluginu <b>{{pluginResolver.name}}<ng-container *ngIf="pluginSetting"> - {{pluginSetting.name}}</ng-container></b></h3>
   </div> <!-- /.card-body -->
   <div class="card-body">
-    <ng-template></ng-template>
+    <ng-template #adminContent></ng-template>
     <div class="container-fluid mt-3">
       <div class="row justify-content-end">
         <a [routerLink]="['../../list-created', pluginResolver.identifier]" mat-button>Zpět na vytvořených pluginů</a>
-        <button type="submit" mat-raised-button color="primary" class="ml-2"><i class="material-icons">add</i>Uložit
+        <button (click)="onSubmit()" type="submit" mat-raised-button color="primary" class="ml-2"><i class="material-icons">add</i>Uložit
         </button>
       </div>
     </div>
