Submenu for context menu

--- a/frontend/src/app/admin/entry-route/administration/admin/page/page-builder/page-builder.component.html
+++ b/frontend/src/app/admin/entry-route/administration/admin/page/page-builder/page-builder.component.html
@@ -8,7 +8,7 @@
     <app-palette-builder [pageDetail]="pageDetail"></app-palette-builder>
   </div>
 
-  <app-moveable-settings></app-moveable-settings>
+  <app-moveable-modal></app-moveable-modal>
 
 </div>
 
