--- a/frontend/src/app/shared/core/components/moveable-modal/moveable-modal.component.html
+++ b/frontend/src/app/shared/core/components/moveable-modal/moveable-modal.component.html
@@ -1,3 +1,3 @@
 <div cdkDrag cdkDragRootElement="app-moveable-modal" class="wrapper d-flex align-items-stretch">
-  <ng-container #content></ng-container>
+  <ng-content #content></ng-content>
 </div>
