Submenu for context menu

--- a/frontend/src/app/admin/entry-route/administration/admin/page/page-builder/page-builder.component.css
+++ b/frontend/src/app/admin/entry-route/administration/admin/page/page-builder/page-builder.component.css
@@ -3,3 +3,15 @@
   top: 74px;
   right: 19px;
 }
+
+.global-plugin-selector {
+  border-bottom: 1px solid black;
+}
+
+.add-global-plugin {
+  position: absolute;
+  float: right;
+  bottom: 5px;
+  right: 5px;
+  line-height: 20px;
+}
