--- a/frontend/src/app/admin/entry-route/administration/admin/page/page-builder/palette-builder/palette-item-quick-menu/palette-item-quick-menu.component.css
+++ b/frontend/src/app/admin/entry-route/administration/admin/page/page-builder/palette-builder/palette-item-quick-menu/palette-item-quick-menu.component.css
@@ -1,6 +1,6 @@
 :host {
   transition: top 0.5s, left 0.5s;
-  z-index: 999999999;
+  z-index: 9999;
   position: absolute;
   display: none;
   text-align: center;
