--- a/frontend/src/app/plugins/text-plugin/admin/text-plugin-admin/text-plugin-admin.component.html
+++ b/frontend/src/app/plugins/text-plugin/admin/text-plugin-admin/text-plugin-admin.component.html
@@ -1,5 +1,6 @@
 <form [formGroup]="adminForm">
-  <textarea appFormError type="text" class="form-control" placeholder="Text" formControlName="text"></textarea>
+  <label for="text">Text</label>
+  <textarea id="text" appFormError type="text" class="form-control" placeholder="Text" formControlName="text"></textarea>
 </form>
 
 
