--- a/frontend/src/app/shared/core/components/mini-admin/mini-admin.component.css
+++ b/frontend/src/app/shared/core/components/mini-admin/mini-admin.component.css
@@ -33,6 +33,7 @@
   display: block;
   color: rgba(255, 255, 255, 0.6);
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  margin: 9px 0px;
 }
 
 #content {
@@ -43,6 +44,7 @@
   padding: 0 !important;
   background-color: white;
   border-top: 1px solid rgba(0,0,0,.125);
+  margin-bottom: 43px;
 }
 
 #content h5 {
