--- a/frontend/src/app/admin/entry-route/administration/admin/page/page-builder/page-builder.component.html
+++ b/frontend/src/app/admin/entry-route/administration/admin/page/page-builder/page-builder.component.html
@@ -7,8 +7,25 @@
   <div class="col-md-10">
     <app-palette-builder [pageDetail]="pageDetail"></app-palette-builder>
   </div>
+<!--  {{namePlugin}}-->
 
-  <app-moveable-modal></app-moveable-modal>
+  <app-moveable-modal>
+    <div class="global-plugin-selector">
+      <div class="row">
+        <div class="col-md-12 text-right">
+          <div>
+            Vyberte plugin:
+            <select>
+              <option (click)="null" [value]="">--Nevybráno--</option>
+              <option (click)="initSettingsFromSelect(plugin)" [value]="plugin.id" *ngFor="let plugin of globalPlugins">{{plugin.name}}</option>
+            </select>
+          </div>
+        </div>
+      </div>
+    </div>
+    <app-mini-admin #modalContent></app-mini-admin>
+    <button mat-raised-button color="primary" class="add-global-plugin"><i class="material-icons">add</i>Uložit jako nový plugin</button>
+  </app-moveable-modal>
 
 </div>
 
