--- a/frontend/src/app/admin/entry-route/administration/admin/plugin/update-plugin/update-plugin.component.html
+++ b/frontend/src/app/admin/entry-route/administration/admin/plugin/update-plugin/update-plugin.component.html
@@ -1,6 +1,6 @@
 <div class="card card-primary card-outline">
   <div class="card-header">
-    <h3 class="card-title">Úprava pluginu <b>{{pluginResolver.name}}<ng-container *ngIf="pluginSetting"> - {{pluginSetting.name}}</ng-container></b></h3>
+    <h3 class="card-title">Úprava pluginu <b>{{pluginResolver.name}}<ng-container *ngIf="pluginSetting">: {{pluginSetting.name}}</ng-container></b></h3>
   </div> <!-- /.card-body -->
   <div class="card-body">
     <app-mini-admin #miniAdmin></app-mini-admin>
