--- a/frontend/src/app/shared/core/components/moveable-modal/moveable-modal.component.html
+++ b/frontend/src/app/shared/core/components/moveable-modal/moveable-modal.component.html
@@ -1,3 +1,7 @@
-<div cdkDrag cdkDragRootElement="app-moveable-modal" class="wrapper d-flex align-items-stretch">
-  <ng-content #content></ng-content>
+<div cdkDrag cdkDragRootElement="app-moveable-modal" class="wrapper align-items-stretch">
+  <div cdkDragHandle class="move-line">
+    <span class="header-title">{{title}}</span>
+    <mat-icon (click)="close()" class="float-right close-icon">close</mat-icon>
+  </div>
+  <ng-content></ng-content>
 </div>
