--- a/frontend/src/app/page/pages/page-builder/page-builder.component.css
+++ b/frontend/src/app/page/pages/page-builder/page-builder.component.css
@@ -4,6 +4,12 @@
   right: 19px;
 }
 
+.preview-builder{
+  position: absolute;
+  top: 74px;
+  right: 120px;
+}
+
 .global-plugin-selector {
   border-bottom: 1px solid black;
 }
