--- a/frontend/src/app/page/pages/page-builder/page-builder.component.html
+++ b/frontend/src/app/page/pages/page-builder/page-builder.component.html
@@ -1,4 +1,6 @@
-<button class="save-builder" (click)="save()" mat-raised-button color="primary"><i class="material-icons">save</i>Uložit úpravy
+<button class="save-builder" (click)="save()" mat-raised-button color="primary"><i class="material-icons">save</i>Uložit
+</button>
+<button class="preview-builder" (click)="preview()" mat-raised-button color="primary"><i class="material-icons">preview</i>Náhled
 </button>
 <div class="row">
   <div class="col-md-2">
