--- a/frontend/src/app/page/pages/page-builder/page-builder.component.html
+++ b/frontend/src/app/page/pages/page-builder/page-builder.component.html
@@ -1,7 +1,11 @@
-<button class="save-builder" (click)="save()" mat-raised-button color="primary"><i class="material-icons">save</i>Uložit
-</button>
-<button class="preview-builder" (click)="preview()" mat-raised-button color="primary"><i class="material-icons">preview</i>Náhled
-</button>
+<div class="row">
+  <div class="col-md-12 text-right">
+    <button class="preview-builder" (click)="preview()" mat-raised-button color="primary"><i class="material-icons">preview</i>Náhled
+    </button>
+    <button class="save-builder ml-1" (click)="save()" mat-raised-button color="primary"><i class="material-icons">save</i>Uložit
+    </button>
+  </div>
+</div>
 <div class="row">
   <div class="col-md-2">
     <app-menu-builder></app-menu-builder>
