--- a/frontend/src/app/layout/components/layout/layout.component.css
+++ b/frontend/src/app/layout/components/layout/layout.component.css
@@ -15,6 +15,10 @@
   position: fixed;
 }
 
+.content-header {
+  padding: 5px 0.5rem
+}
+
 :host ::ng-deep .mat-form-field-infix {
   border-top: .0em solid black !important;
 }
