--- a/frontend/src/app/layout/components/menu/menu.component.html
+++ b/frontend/src/app/layout/components/menu/menu.component.html
@@ -17,7 +17,7 @@
     </a>
   </li>
   <li class="nav-item">
-    <a routerLink="page/list" routerLinkActive="active" class="nav-link" (click)="title.setTitle('Moje stránky')">
+    <a routerLink="page/list" routerLinkActive="active" class="nav-link">
       <i class="nav-icon fas fa-copy"></i>
       <p>
         Moje stránky
