--- a/frontend/src/app/plugin/pages/list-available/list-available.component.html
+++ b/frontend/src/app/plugin/pages/list-available/list-available.component.html
@@ -1,9 +1,9 @@
-<div class="card card-primary card-outline" [style.display]="availableEnabledPlugins.length ? 'block' : 'none'">
+<div class="card card-primary card-outline">
   <div class="card-header">
-    <h3 class="card-title">Seznam aktivních pluginů</h3>
+    <h3 class="card-title">Seznam pluginů</h3>
   </div> <!-- /.card-body -->
   <div class="card-body">
-    <table mat-table [dataSource]="availableEnabledPlugins" class="w-100">
+    <table mat-table [dataSource]="allPlugins" class="w-100">
 
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Název</th>
@@ -17,7 +17,7 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef class="text-right">Akce</th>
         <td mat-cell *matCellDef="let element" class="text-right">
-          <mat-icon>settings</mat-icon> <a [routerLink]="['../list-created', element.identifier]">Vstoupit</a>
+          <a [routerLink]="['../list-created', element.identifier]"><mat-icon>settings</mat-icon>Vstoupit</a>
         </td>
       </ng-container>
 
