--- a/frontend/src/app/plugin/pages/update-plugin/update-plugin.component.html
+++ b/frontend/src/app/plugin/pages/update-plugin/update-plugin.component.html
@@ -7,7 +7,7 @@
     <div class="container-fluid mt-3">
       <div class="row justify-content-end">
         <a [routerLink]="['../../list-created', pluginResolver.identifier]" mat-button>Zpět na vytvořených pluginů</a>
-        <button (click)="onSubmit()" type="submit" mat-raised-button color="primary" class="ml-2"><i class="material-icons">add</i>Uložit
+        <button (click)="submit()" type="submit" mat-raised-button color="primary" class="ml-2"><i class="material-icons">add</i>Uložit
         </button>
       </div>
     </div>
